--- a/bower.json
+++ b/bower.json
@@ -6,7 +6,8 @@
     "ionic-service-core": "~0.1.7",
     "ionic-service-push": "~0.1.8",
     "ionic-service-deploy": "~0.1.1",
-    "ionic-service-analytics": "~0.1.2"
+    "ionic-service-analytics": "~0.1.2",
+    "ngCordova": "~0.1.17-alpha"
   },
   "dependencies": {
     "angular-imgcache.js": "~0.1.0"
