--- a/ionic.project
+++ b/ionic.project
@@ -1,4 +1,12 @@
 {
   "name": "MarriageStrong",
-  "app_id": "b5459458"
+  "app_id": "b5459458",
+  "gulpStartupTasks": [
+    "sass",
+    "watch"
+  ],
+  "watchPatterns": [
+    "www/**/*",
+    "!www/lib/**/*"
+  ]
 }
