--- a/bower.json
+++ b/bower.json
@@ -10,6 +10,7 @@
     "ngCordova": "~0.1.17-alpha"
   },
   "dependencies": {
-    "angular-imgcache.js": "~0.1.0"
+    "angular-imgcache.js": "~0.1.0",
+    "angular-messages": "1.3.6"
   }
 }
