--- a/www/lib/angular-messages/package.json
+++ b/www/lib/angular-messages/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "angular",
-  "version": "1.4.3",
-  "description": "HTML enhanced for web apps",
-  "main": "index.js",
+  "name": "angular-messages",
+  "version": "1.3.6",
+  "description": "AngularJS module that provides enhanced support for displaying messages within templates",
+  "main": "angular-messages.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
