--- a/bower.json
+++ b/bower.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "angular-imgcache.js": "~0.1.0",
-    "angular-messages": "1.3.6"
+    "angular-messages": "1.3.6",
+    "ionic-datepicker": "~0.7.0"
   }
 }
