--- a/bower.json
+++ b/bower.json
@@ -12,7 +12,8 @@
   "dependencies": {
     "angular-imgcache.js": "~0.1.0",
     "angular-messages": "1.3.6",
-    "ionic-datepicker": "~0.9.0"
+    "ionic-datepicker": "~0.9.0",
+    "jr-crop": "~1.1.2"
   },
   "resolutions": {
     "angular": "~1.4.5",
