--- a/bower.json
+++ b/bower.json
@@ -16,8 +16,8 @@
     "jr-crop": "~1.1.2"
   },
   "resolutions": {
-    "angular": "~1.4.5",
-    "angular-animate": "~1.4.5",
-    "angular-sanitize": "~1.4.5"
+    "angular": "^1.5.0",
+    "angular-sanitize": "^1.5.0",
+    "angular-animate": "~1.5.0"
   }
 }
