--- a/bower.json
+++ b/bower.json
@@ -12,8 +12,7 @@
   "dependencies": {
     "angular-imgcache.js": "~0.1.0",
     "angular-messages": "1.3.6",
-    "ionic-datepicker": "~0.9.0",
-    "jr-crop": "~1.1.2"
+    "ionic-datepicker": "~0.9.0"
   },
   "resolutions": {
     "angular": "^1.5.0",
